<resources>
    <string name="app_name">AllRight</string>
    <string name="search_label">Search</string>
    <string name="listing_label">Listing</string>
    <string name="listing_images_label">Listing Images</string>
    <string name="extended_fab_filter_content">Filter</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>

    <!-- Format strings-->
    <string name="format_price">$%.2f</string>
    <string name="fullname_concatenate">%s %s</string>

    <!-- Main menu items -->
    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_my_allgoods">My AllGoods</string>

    <!-- Top menu items -->
    <string name="item_search">Search</string>
    <string name="item_settings">Settings</string>

    <!-- Search fragments -->
    <string name="title_results">Search Results</string>
    <string name="title_filters">Search Filters</string>

    <!-- Filters -->
    <string name="btn_title_apply_filters">Apply Filters</string>
    <string name="marketplace_title">Marketplace</string>
    <string name="marketplace_mall">Mall</string>
    <string name="marketplace_secondhand">Secondhand</string>
    <string name="category_title">Category</string>
    <string name="sort_by_title">Sort By</string>
    <string name="sort_by_best">Best Match</string>
    <string name="sort_by_popular">Popularity</string>
    <string name="sort_by_trending">Trending</string>
    <string name="sort_by_price_shipped_lowest">Price + Shipping: Lowest first</string>
    <string name="sort_by_price_lowest">Price: Lowest first</string>
    <string name="sort_by_price_highest">Price: Highest first</string>
    <string name="sort_by_buy_now_lowest">Buy Now: Lowest first</string>
    <string name="sort_by_buy_now_highest">Buy Now: Highest first</string>
    <string name="sort_by_new_products">New Arrivals</string>
    <string name="sort_by_new_listings">New Listings</string>
    <string name="sort_by_sale">Sale Value</string>
    <string name="sort_by_alphabetical">A-Z</string>
    <string name="sort_by_closing_soon">Closing soon</string>
    <string name="sort_by_most_bids">Most bids</string>
    <string name="free_shipping_title">Free Shipping</string>
    <string name="fast_shipping_title">Fast Shipping</string>
    <string name="brand_new_title">Brand New Only</string>
    <string name="refine_title">Refine</string>

    <!-- Listing activity -->
    <string name="btn_visit_listing">View Listing</string>
    <string name="title_buy_now_price">Buy Now</string>
    <string name="title_start_price">Start Price</string>
    <string name="title_sellers_details">Seller\'s Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_properties">Item Specifics</string>

    <!-- Preference Titles -->
    <string name="about_header">About</string>
    <string name="account_header">Account</string>
    <string name="search_header">Search</string>

    <!-- About Preferences -->
    <string name="oss_notices_title">Open source licenses</string>
    <string name="version_title">Build version</string>

    <!-- Account preferences -->
    <string name="logout_title">Logout</string>

    <!-- Search Preferences -->
    <string name="default_marketplace_title">Default marketplace</string>

    <!-- Keys -->
    <string name="preference_crypt_auth_key">crypt_auth</string>
    <string name="user_bearer_token_key">user.bearerToken</string>

    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid email address</string>
    <string name="invalid_password">Password cannot be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="api_error_network">Network failure</string>
    <string name="api_error_conversion">Conversion error</string>
    <string name="no_network_error">No internet connection</string>
    <string name="invalid_token_error">Invalid or expired credentials</string>
    <string name="category_up_description">Navigate to parent category</string>
    <string name="loading_child_categories">Fetching categories</string>
    <string name="no_results_title">No items found</string>
    <string name="no_results_info">We couldn\'t find anything that matched your query.
        You could try adjusting your filters or search inside a different category.</string>
    <string name="marketplace_not_supported_message">We do not support this marketplace. Would you like to continue in your browser?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="restricted_category_title">Restricted category</string>
    <string name="restricted_category_message">You must be at least 18 years old to browse this category.</string>
    <string name="restricted_category_continue">Continue</string>
    <string name="error_occurred_preamble">An error occurred: </string>
</resources>
