<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/search_header">

        <ListPreference
            android:defaultValue="mall"
            android:entries="@array/marketplace"
            android:entryValues="@array/marketplace_values"
            android:key="default_marketplace"
            android:title="@string/default_marketplace_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">

        <Preference
            app:key="version"
            app:summary="@string/app_version"
            app:title="@string/version_title" />

    </PreferenceCategory>

</PreferenceScreen>
